cs152_phase3/miniL-parser.output
Terminals unused in grammar

   TRUE
   FALSE
   OR
   AND


Grammar

    0 $accept: Program $end

    1 Program: Functions

    2 Functions: Function Functions
    3          | %empty

    4 $@1: %empty

    5 $@2: %empty

    6 Function: FUNCTION IDENTIFIER $@1 SEMICOLON BEGIN_PARAMS Declarations $@2 END_PARAMS BEGIN_LOCALS Declarations END_LOCALS BEGIN_BODY Statements END_BODY

    7 Declarations: Declaration SEMICOLON Declarations
    8             | %empty

    9 Declaration: IDENTIFIER COLON INTEGER
   10            | IDENTIFIER COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER

   11 Statements: Statement SEMICOLON Statements
   12           | %empty

   13 Statement: Var ASSIGN Expression

   14 $@3: %empty

   15 Statement: IF Bool-Exp THEN $@3 Statement SEMICOLON Statements Else ENDIF

   16 $@4: %empty

   17 Statement: WHILE Bool-Exp BEGINLOOP $@4 Statement SEMICOLON Statements ENDLOOP

   18 $@5: %empty

   19 Statement: DO BEGINLOOP $@5 Statement SEMICOLON Statements ENDLOOP WHILE Bool-Exp
   20          | READ Var
   21          | WRITE Var
   22          | CONTINUE
   23          | BREAK
   24          | RETURN Expression

   25 Else: %empty

   26 $@6: %empty

   27 Else: ELSE $@6 Statement SEMICOLON Statements

   28 Var: IDENTIFIER
   29    | IDENTIFIER L_SQUARE_BRACKET Expression R_SQUARE_BRACKET

   30 Expression: Expression ADD Multiplicative_Expr
   31           | Expression SUB Multiplicative_Expr
   32           | Multiplicative_Expr

   33 Multiplicative_Expr: Multiplicative_Expr MULT Term
   34                    | Multiplicative_Expr DIV Term
   35                    | Multiplicative_Expr MOD Term
   36                    | Term

   37 Term: Var
   38     | NUMBER
   39     | L_PAREN Expression R_PAREN
   40     | IDENTIFIER L_PAREN Expression Comma_Expr R_PAREN
   41     | IDENTIFIER L_PAREN R_PAREN

   42 Comma_Expr: COMMA Expression Comma_Expr
   43           | %empty

   44 Bool-Exp: NOT Bool-Exp
   45         | Expression Comp Expression

   46 Comp: EQ
   47     | NEQ
   48     | LT
   49     | GT
   50     | LTE
   51     | GTE


Terminals, with rules where they appear

$end (0) 0
error (256)
FUNCTION (258) 6
BEGIN_PARAMS (259) 6
END_PARAMS (260) 6
BEGIN_LOCALS (261) 6
END_LOCALS (262) 6
BEGIN_BODY (263) 6
END_BODY (264) 6
INTEGER (265) 9 10
ARRAY (266) 10
OF (267) 10
IF (268) 15
THEN (269) 15
ENDIF (270) 15
ELSE (271) 27
WHILE (272) 17 19
DO (273) 19
BEGINLOOP (274) 17 19
ENDLOOP (275) 17 19
CONTINUE (276) 22
BREAK (277) 23
READ (278) 20
WRITE (279) 21
TRUE (280)
FALSE (281)
RETURN (282) 24
SUB (283) 31
ADD (284) 30
MULT (285) 33
DIV (286) 34
MOD (287) 35
EQ (288) 46
NEQ (289) 47
LT (290) 48
GT (291) 49
LTE (292) 50
GTE (293) 51
L_PAREN (294) 39 40 41
R_PAREN (295) 39 40 41
L_SQUARE_BRACKET (296) 10 29
R_SQUARE_BRACKET (297) 10 29
OR (298)
AND (299)
NOT (300) 44
ASSIGN (301) 13
IDENTIFIER (302) 6 9 10 28 29 40 41
NUMBER (303) 10 38
SEMICOLON (304) 6 7 11 15 17 19 27
COLON (305) 9 10
COMMA (306) 42


Nonterminals, with rules where they appear

$accept (52)
    on left: 0
Program (53)
    on left: 1, on right: 0
Functions (54)
    on left: 2 3, on right: 1 2
Function (55)
    on left: 6, on right: 2
$@1 (56)
    on left: 4, on right: 6
$@2 (57)
    on left: 5, on right: 6
Declarations (58)
    on left: 7 8, on right: 6 7
Declaration (59)
    on left: 9 10, on right: 7
Statements (60)
    on left: 11 12, on right: 6 11 15 17 19 27
Statement (61)
    on left: 13 15 17 19 20 21 22 23 24, on right: 11 15 17 19 27
$@3 (62)
    on left: 14, on right: 15
$@4 (63)
    on left: 16, on right: 17
$@5 (64)
    on left: 18, on right: 19
Else (65)
    on left: 25 27, on right: 15
$@6 (66)
    on left: 26, on right: 27
Var (67)
    on left: 28 29, on right: 13 20 21 37
Expression (68)
    on left: 30 31 32, on right: 13 24 29 30 31 39 40 42 45
Multiplicative_Expr (69)
    on left: 33 34 35 36, on right: 30 31 32 33 34 35
Term (70)
    on left: 37 38 39 40 41, on right: 33 34 35 36
Comma_Expr (71)
    on left: 42 43, on right: 40 42
Bool-Exp (72)
    on left: 44 45, on right: 15 17 19 44
Comp (73)
    on left: 46 47 48 49 50 51, on right: 45


State 0

    0 $accept: . Program $end

    FUNCTION  shift, and go to state 1

    $default  reduce using rule 3 (Functions)

    Program    go to state 2
    Functions  go to state 3
    Function   go to state 4


State 1

    6 Function: FUNCTION . IDENTIFIER $@1 SEMICOLON BEGIN_PARAMS Declarations $@2 END_PARAMS BEGIN_LOCALS Declarations END_LOCALS BEGIN_BODY Statements END_BODY

    IDENTIFIER  shift, and go to state 5


State 2

    0 $accept: Program . $end

    $end  shift, and go to state 6


State 3

    1 Program: Functions .

    $default  reduce using rule 1 (Program)


State 4

    2 Functions: Function . Functions

    FUNCTION  shift, and go to state 1

    $default  reduce using rule 3 (Functions)

    Functions  go to state 7
    Function   go to state 4


State 5

    6 Function: FUNCTION IDENTIFIER . $@1 SEMICOLON BEGIN_PARAMS Declarations $@2 END_PARAMS BEGIN_LOCALS Declarations END_LOCALS BEGIN_BODY Statements END_BODY

    $default  reduce using rule 4 ($@1)

    $@1  go to state 8


State 6

    0 $accept: Program $end .

    $default  accept


State 7

    2 Functions: Function Functions .

    $default  reduce using rule 2 (Functions)


State 8

    6 Function: FUNCTION IDENTIFIER $@1 . SEMICOLON BEGIN_PARAMS Declarations $@2 END_PARAMS BEGIN_LOCALS Declarations END_LOCALS BEGIN_BODY Statements END_BODY

    SEMICOLON  shift, and go to state 9


State 9

    6 Function: FUNCTION IDENTIFIER $@1 SEMICOLON . BEGIN_PARAMS Declarations $@2 END_PARAMS BEGIN_LOCALS Declarations END_LOCALS BEGIN_BODY Statements END_BODY

    BEGIN_PARAMS  shift, and go to state 10


State 10

    6 Function: FUNCTION IDENTIFIER $@1 SEMICOLON BEGIN_PARAMS . Declarations $@2 END_PARAMS BEGIN_LOCALS Declarations END_LOCALS BEGIN_BODY Statements END_BODY

    IDENTIFIER  shift, and go to state 11

    $default  reduce using rule 8 (Declarations)

    Declarations  go to state 12
    Declaration   go to state 13


State 11

    9 Declaration: IDENTIFIER . COLON INTEGER
   10            | IDENTIFIER . COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER

    COLON  shift, and go to state 14


State 12

    6 Function: FUNCTION IDENTIFIER $@1 SEMICOLON BEGIN_PARAMS Declarations . $@2 END_PARAMS BEGIN_LOCALS Declarations END_LOCALS BEGIN_BODY Statements END_BODY

    $default  reduce using rule 5 ($@2)

    $@2  go to state 15


State 13

    7 Declarations: Declaration . SEMICOLON Declarations

    SEMICOLON  shift, and go to state 16


State 14

    9 Declaration: IDENTIFIER COLON . INTEGER
   10            | IDENTIFIER COLON . ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER

    INTEGER  shift, and go to state 17
    ARRAY    shift, and go to state 18


State 15

    6 Function: FUNCTION IDENTIFIER $@1 SEMICOLON BEGIN_PARAMS Declarations $@2 . END_PARAMS BEGIN_LOCALS Declarations END_LOCALS BEGIN_BODY Statements END_BODY

    END_PARAMS  shift, and go to state 19


State 16

    7 Declarations: Declaration SEMICOLON . Declarations

    IDENTIFIER  shift, and go to state 11

    $default  reduce using rule 8 (Declarations)

    Declarations  go to state 20
    Declaration   go to state 13


State 17

    9 Declaration: IDENTIFIER COLON INTEGER .

    $default  reduce using rule 9 (Declaration)


State 18

   10 Declaration: IDENTIFIER COLON ARRAY . L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER

    L_SQUARE_BRACKET  shift, and go to state 21


State 19

    6 Function: FUNCTION IDENTIFIER $@1 SEMICOLON BEGIN_PARAMS Declarations $@2 END_PARAMS . BEGIN_LOCALS Declarations END_LOCALS BEGIN_BODY Statements END_BODY

    BEGIN_LOCALS  shift, and go to state 22


State 20

    7 Declarations: Declaration SEMICOLON Declarations .

    $default  reduce using rule 7 (Declarations)


State 21

   10 Declaration: IDENTIFIER COLON ARRAY L_SQUARE_BRACKET . NUMBER R_SQUARE_BRACKET OF INTEGER

    NUMBER  shift, and go to state 23


State 22

    6 Function: FUNCTION IDENTIFIER $@1 SEMICOLON BEGIN_PARAMS Declarations $@2 END_PARAMS BEGIN_LOCALS . Declarations END_LOCALS BEGIN_BODY Statements END_BODY

    IDENTIFIER  shift, and go to state 11

    $default  reduce using rule 8 (Declarations)

    Declarations  go to state 24
    Declaration   go to state 13


State 23

   10 Declaration: IDENTIFIER COLON ARRAY L_SQUARE_BRACKET NUMBER . R_SQUARE_BRACKET OF INTEGER

    R_SQUARE_BRACKET  shift, and go to state 25


State 24

    6 Function: FUNCTION IDENTIFIER $@1 SEMICOLON BEGIN_PARAMS Declarations $@2 END_PARAMS BEGIN_LOCALS Declarations . END_LOCALS BEGIN_BODY Statements END_BODY

    END_LOCALS  shift, and go to state 26


State 25

   10 Declaration: IDENTIFIER COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET . OF INTEGER

    OF  shift, and go to state 27


State 26

    6 Function: FUNCTION IDENTIFIER $@1 SEMICOLON BEGIN_PARAMS Declarations $@2 END_PARAMS BEGIN_LOCALS Declarations END_LOCALS . BEGIN_BODY Statements END_BODY

    BEGIN_BODY  shift, and go to state 28


State 27

   10 Declaration: IDENTIFIER COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF . INTEGER

    INTEGER  shift, and go to state 29


State 28

    6 Function: FUNCTION IDENTIFIER $@1 SEMICOLON BEGIN_PARAMS Declarations $@2 END_PARAMS BEGIN_LOCALS Declarations END_LOCALS BEGIN_BODY . Statements END_BODY

    IF          shift, and go to state 30
    WHILE       shift, and go to state 31
    DO          shift, and go to state 32
    CONTINUE    shift, and go to state 33
    BREAK       shift, and go to state 34
    READ        shift, and go to state 35
    WRITE       shift, and go to state 36
    RETURN      shift, and go to state 37
    IDENTIFIER  shift, and go to state 38

    $default  reduce using rule 12 (Statements)

    Statements  go to state 39
    Statement   go to state 40
    Var         go to state 41


State 29

   10 Declaration: IDENTIFIER COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER .

    $default  reduce using rule 10 (Declaration)


State 30

   15 Statement: IF . Bool-Exp THEN $@3 Statement SEMICOLON Statements Else ENDIF

    L_PAREN     shift, and go to state 42
    NOT         shift, and go to state 43
    IDENTIFIER  shift, and go to state 44
    NUMBER      shift, and go to state 45

    Var                  go to state 46
    Expression           go to state 47
    Multiplicative_Expr  go to state 48
    Term                 go to state 49
    Bool-Exp             go to state 50


State 31

   17 Statement: WHILE . Bool-Exp BEGINLOOP $@4 Statement SEMICOLON Statements ENDLOOP

    L_PAREN     shift, and go to state 42
    NOT         shift, and go to state 43
    IDENTIFIER  shift, and go to state 44
    NUMBER      shift, and go to state 45

    Var                  go to state 46
    Expression           go to state 47
    Multiplicative_Expr  go to state 48
    Term                 go to state 49
    Bool-Exp             go to state 51


State 32

   19 Statement: DO . BEGINLOOP $@5 Statement SEMICOLON Statements ENDLOOP WHILE Bool-Exp

    BEGINLOOP  shift, and go to state 52


State 33

   22 Statement: CONTINUE .

    $default  reduce using rule 22 (Statement)


State 34

   23 Statement: BREAK .

    $default  reduce using rule 23 (Statement)


State 35

   20 Statement: READ . Var

    IDENTIFIER  shift, and go to state 38

    Var  go to state 53


State 36

   21 Statement: WRITE . Var

    IDENTIFIER  shift, and go to state 38

    Var  go to state 54


State 37

   24 Statement: RETURN . Expression

    L_PAREN     shift, and go to state 42
    IDENTIFIER  shift, and go to state 44
    NUMBER      shift, and go to state 45

    Var                  go to state 46
    Expression           go to state 55
    Multiplicative_Expr  go to state 48
    Term                 go to state 49


State 38

   28 Var: IDENTIFIER .
   29    | IDENTIFIER . L_SQUARE_BRACKET Expression R_SQUARE_BRACKET

    L_SQUARE_BRACKET  shift, and go to state 56

    $default  reduce using rule 28 (Var)


State 39

    6 Function: FUNCTION IDENTIFIER $@1 SEMICOLON BEGIN_PARAMS Declarations $@2 END_PARAMS BEGIN_LOCALS Declarations END_LOCALS BEGIN_BODY Statements . END_BODY

    END_BODY  shift, and go to state 57


State 40

   11 Statements: Statement . SEMICOLON Statements

    SEMICOLON  shift, and go to state 58


State 41

   13 Statement: Var . ASSIGN Expression

    ASSIGN  shift, and go to state 59


State 42

   39 Term: L_PAREN . Expression R_PAREN

    L_PAREN     shift, and go to state 42
    IDENTIFIER  shift, and go to state 44
    NUMBER      shift, and go to state 45

    Var                  go to state 46
    Expression           go to state 60
    Multiplicative_Expr  go to state 48
    Term                 go to state 49


State 43

   44 Bool-Exp: NOT . Bool-Exp

    L_PAREN     shift, and go to state 42
    NOT         shift, and go to state 43
    IDENTIFIER  shift, and go to state 44
    NUMBER      shift, and go to state 45

    Var                  go to state 46
    Expression           go to state 47
    Multiplicative_Expr  go to state 48
    Term                 go to state 49
    Bool-Exp             go to state 61


State 44

   28 Var: IDENTIFIER .
   29    | IDENTIFIER . L_SQUARE_BRACKET Expression R_SQUARE_BRACKET
   40 Term: IDENTIFIER . L_PAREN Expression Comma_Expr R_PAREN
   41     | IDENTIFIER . L_PAREN R_PAREN

    L_PAREN           shift, and go to state 62
    L_SQUARE_BRACKET  shift, and go to state 56

    $default  reduce using rule 28 (Var)


State 45

   38 Term: NUMBER .

    $default  reduce using rule 38 (Term)


State 46

   37 Term: Var .

    $default  reduce using rule 37 (Term)


State 47

   30 Expression: Expression . ADD Multiplicative_Expr
   31           | Expression . SUB Multiplicative_Expr
   45 Bool-Exp: Expression . Comp Expression

    SUB  shift, and go to state 63
    ADD  shift, and go to state 64
    EQ   shift, and go to state 65
    NEQ  shift, and go to state 66
    LT   shift, and go to state 67
    GT   shift, and go to state 68
    LTE  shift, and go to state 69
    GTE  shift, and go to state 70

    Comp  go to state 71


State 48

   32 Expression: Multiplicative_Expr .
   33 Multiplicative_Expr: Multiplicative_Expr . MULT Term
   34                    | Multiplicative_Expr . DIV Term
   35                    | Multiplicative_Expr . MOD Term

    MULT  shift, and go to state 72
    DIV   shift, and go to state 73
    MOD   shift, and go to state 74

    $default  reduce using rule 32 (Expression)


State 49

   36 Multiplicative_Expr: Term .

    $default  reduce using rule 36 (Multiplicative_Expr)


State 50

   15 Statement: IF Bool-Exp . THEN $@3 Statement SEMICOLON Statements Else ENDIF

    THEN  shift, and go to state 75


State 51

   17 Statement: WHILE Bool-Exp . BEGINLOOP $@4 Statement SEMICOLON Statements ENDLOOP

    BEGINLOOP  shift, and go to state 76


State 52

   19 Statement: DO BEGINLOOP . $@5 Statement SEMICOLON Statements ENDLOOP WHILE Bool-Exp

    $default  reduce using rule 18 ($@5)

    $@5  go to state 77


State 53

   20 Statement: READ Var .

    $default  reduce using rule 20 (Statement)


State 54

   21 Statement: WRITE Var .

    $default  reduce using rule 21 (Statement)


State 55
